--- a/MvcCv/Views/Admin/AdminEkle.cshtml
+++ b/MvcCv/Views/Admin/AdminEkle.cshtml
@@ -5,14 +5,14 @@
 }
 
 <br />
-<h4>Yeni Kullanıcı Ekleme Sayfası</h4>
+<h4>Add New Admin Page</h4>
 <br />
 <form method="post">
-    <input type="text" name="KullaniciAdi" class="form-control" placeholder="Kullanıcı Adı" />
+    <input type="text" name="KullaniciAdi" class="form-control" placeholder="User Name" />
     <br />
-    <input type="text" name="Sifre" class="form-control" placeholder="Şifreniz" />
+    <input type="text" name="Sifre" class="form-control" placeholder="Password" />
     <br />   
-    <button class="btn btn-info">Kaydet</button>
+    <button class="btn btn-info">Save</button>
 </form>
 
 
