--- a/MvcCv/Views/Admin/Index.cshtml
+++ b/MvcCv/Views/Admin/Index.cshtml
@@ -7,23 +7,23 @@
 }
 
 <br />
-<h2>Admin İşlemleri</h2>
+<h2>Admin Settings</h2>
 <table class="table table-bordered">
     <tr>
         <th>ID</th>
-        <th>Kullanıcı Adı</th>
-        <th>Düzenle</th>        
-        <th>Kaldır</th>
+        <th>User Name</th>
+        <th>Edit</th>        
+        <th>Remove</th>
     </tr>
     @foreach (var item in Model)
     {
         <tr>
             <td>@item.ID</td>
             <td>@item.KullaniciAdi</td>            
-            <td><a href="/Admin/AdminDuzenle/@item.ID" class="btn btn-warning">Düzenle</a></td>
-            <td><a href="/Admin/AdminSil/@item.ID" class="btn btn-danger">Sil</a></td>
+            <td><a href="/Admin/AdminDuzenle/@item.ID" class="btn btn-warning">Edit</a></td>
+            <td><a href="/Admin/AdminSil/@item.ID" class="btn btn-danger">Delete</a></td>
         </tr>
     }
 </table>
 
-<a href="/Admin/AdminEkle" class="btn btn-primary">Yeni Kullanıcı Ekle</a>
+<a href="/Admin/AdminEkle" class="btn btn-primary">Add New Admin</a>
