--- a/MvcCv/Views/Default/iletisim.cshtml
+++ b/MvcCv/Views/Default/iletisim.cshtml
@@ -1,19 +1,19 @@
 ﻿
 <div class="resume-section-content">
     <form method="post">
-        <h2 class="mb-5">Iletisim</h2>
-        <label>Ad Soyad</label>
+        <h2 class="mb-5">Concat Me</h2>
+        <label>Full Name</label>
         <input type="text" class="form-control mb-2" name="AdSoyad"/>
 
         <label>Mail</label>
         <input type="text" class="form-control mb-2" name="Mail"/>
 
-        <label>Konu</label>
+        <label>Subject</label>
         <input type="text" class="form-control mb-2" name="Konu"/>
 
-        <label>Mesaj</label>
+        <label>Message</label>
         <input type="text" class="form-control mb-2" name="Mesaj"/>
         <br />
-        <button class="btn btn-info">Mesaj Gönder</button>
+        <button class="btn btn-info">Send</button>
     </form>
 </div>
