--- a/MvcCv/Views/Proje/Index.cshtml
+++ b/MvcCv/Views/Proje/Index.cshtml
@@ -20,21 +20,21 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="card-title">Projelerim</h3>
+                                <h3 class="card-title">My Projects</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
-                                <a href="/Proje/ProjeEkle/" class="btn btn-info">Yeni Proje Ekle</a>
+                                <a href="/Proje/ProjeEkle/" class="btn btn-info">Add New project</a>
                                 <br />
                                 <br />
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
                                             <th style="width: 10px">#</th>
-                                            <th>Proje Ad</th>
-                                            <th>Proje Açıklama</th>
-                                            <th>Düzenle</th>
-                                            <th>Sil</th>
+                                            <th>Project Name</th>
+                                            <th>Project Explanation</th>
+                                            <th>Edit</th>
+                                            <th>Delete</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -49,13 +49,13 @@
                                                 <td>
                                                     <a href="/Proje/ProjeGetir/@item.id" class="btn btn-info btn-sm">
                                                         <i class="fas fa-pencil-alt"></i>
-                                                        Düzenle
+                                                        Edit
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="/Proje/ProjeSil/@item.id" class="btn btn-danger btn-sm">
                                                         <i class="fas fa-trash-alt"></i>
-                                                        Sil
+                                                        Delete
                                                     </a>
                                                 </td>
                                             </tr>
