--- a/MvcCv/Views/Proje/ProjeDetay.cshtml
+++ b/MvcCv/Views/Proje/ProjeDetay.cshtml
@@ -115,9 +115,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
 
                         <div class="my-4 ">
-                            <div class="my-2">Projenin ilgili dosyalarına ve proje hakkında daha fazla bilgi için aşağıdaki github iconuna tıklayın.</div>
+                            <div class="my-2">Click on the project's related files and the github icon below for more information about the project.</div>
                             <a href="@Model.ProjeLink"><i class="fab fa-github fa-3x text-secondary"></i></a>
-                            <span>Github Linki</span>
+                            <span>Github Link</span>
                         </div>
                     </div>
                     <div id="comments">
