--- a/MvcCv/Views/Proje/_TopProject.cshtml
+++ b/MvcCv/Views/Proje/_TopProject.cshtml
@@ -7,7 +7,7 @@
         @*<div class="h4 d-flex justify-content-center">Proje Resimleri</div>
             <img src="@Model.ProjeResim2" class="img-fluid" alt="">*@
         <div class="tech-btm">
-            <h4>En Çok Beğeni Alan Projeler</h4>
+            <h4>Most Liked Projects</h4>
 
             @foreach (var item in Model)
             {
