--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -42,7 +42,7 @@
                      alt="AdminLTE Logo"
                      class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">Siteye Git</span>
+                <span class="brand-text font-weight-light">Go To Website</span>
             </a>
 
             <!-- Sidebar -->
@@ -53,7 +53,7 @@
                         <img src="https://i.hizliresim.com/l7jhhqp.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Admin Paneli</a>
+                        <a href="#" class="d-block">Admin Panel</a>
                     </div>
                 </div>
 
@@ -66,7 +66,7 @@
                             <a href="/Hakkimda/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    Hakkımda
+                                    About Me
                                 </p>
                             </a>
                         </li>
@@ -74,7 +74,7 @@
                             <a href="/Egitim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Eğitimlerim
+                                    Educations
                                 </p>
                             </a>
                         </li>
@@ -82,7 +82,7 @@
                             <a href="/Deneyim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
-                                    Deneyimlerim
+                                    Experience
                                 </p>
                             </a>
                         </li>
@@ -90,7 +90,7 @@
                             <a href="/Hobi/Index" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
-                                    Hobilerim
+                                    Interests
                                 </p>
                             </a>
                         </li>
@@ -98,7 +98,7 @@
                             <a href="/Yetenek/Index/" class="nav-link">
                                 <i class="nav-icon far fa-calendar-alt"></i>
                                 <p>
-                                    Yeteneklerim
+                                    Skills
                                 </p>
                             </a>
                         </li>
@@ -106,7 +106,7 @@
                             <a href="/Sertifika/Index" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
-                                    Sertifikalarım
+                                    Sertificates
                                 </p>
                             </a>
                         </li>
@@ -114,7 +114,7 @@
                             <a href="/Iletisim/Index/" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
-                                    İletişim
+                                    Contact
                                 </p>
                             </a>
                         </li>
@@ -122,7 +122,7 @@
                             <a href="/SosyalMedya/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-code"></i>
                                 <p>
-                                    Sosyal Medya
+                                    Social Media
                                 </p>
                             </a>
                         </li>
@@ -130,7 +130,7 @@
                             <a href="/Proje/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-project-diagram"></i>
                                 <p>
-                                    Projeler
+                                    Projects
                                 </p>
                             </a>
                         </li>
@@ -138,7 +138,7 @@
                             <a href="/ProjeMesaj/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-comment"></i>
                                 <p>
-                                    Yorumlar
+                                    Comments
                                 </p>
                             </a>
                         </li>
@@ -146,7 +146,7 @@
                             <a href="/Admin/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-pen"></i>
                                 <p>
-                                    Ayarlar
+                                    Settings
                                 </p>
                             </a>
                         </li>
@@ -154,7 +154,7 @@
                             <a href="/Login/LogOut/" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
-                                    Çıkış
+                                    LogOut
                                 </p>
                             </a>
                         </li>
