--- a/MvcCv/Views/Default/Egitimlerim.cshtml
+++ b/MvcCv/Views/Default/Egitimlerim.cshtml
@@ -2,7 +2,7 @@
 @model List<TblEgitimlerim>
 
 <div class="resume-section-content">
-    <h2 class="mb-5">Eğitim Hayatım</h2>
+    <h2 class="mb-5">Education</h2>
     @foreach (var item in Model)
     {
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
