--- a/MvcCv/Views/Default/Sertifikalarım.cshtml
+++ b/MvcCv/Views/Default/Sertifikalarım.cshtml
@@ -2,7 +2,7 @@
 @model List<TblSertifikalarim>
 
 <div class="resume-section-content">
-    <h2 class="mb-5">Ödüller ve Sertifikalar</h2>
+    <h2 class="mb-5">Awards & Certificates</h2>
     <ul class="fa-ul mb-0">
         @foreach (var item in Model)
         {
