--- a/MvcCv/Views/Default/Yeteneklerim.cshtml
+++ b/MvcCv/Views/Default/Yeteneklerim.cshtml
@@ -8,8 +8,8 @@
 <link href="~/Content/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 
 <div class="resume-section-content">
-    <h2 class="mb-5">Yeteneklerim</h2>
-    <div class="subheading mb-3">Programlama Dilleri & Araçlar</div>
+    <h2 class="mb-5">Skills</h2>
+    <div class="subheading mb-3">Programming Language & Tools</div>
     <ul class="list-inline dev-icons">
         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -22,7 +22,7 @@
         <li class="list-inline-item"><i class="bi bi-filetype-sql"></i></li>
 
     </ul>
-    <div class="subheading mb-3">Becerilerim</div>
+    <div class="subheading mb-3">Skills</div>
     <ul class="fa-ul mb-0">
         @foreach (var item in Model)
         {
