--- a/MvcCv/Views/Deneyim/DeneyimEkle.cshtml
+++ b/MvcCv/Views/Deneyim/DeneyimEkle.cshtml
@@ -4,19 +4,19 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 <br />
-<h4>Deneyim Güncelle Sayfası</h4>
+<h4>Experience Update Page</h4>
 <br />
 <form method="post">
     <input type="text" name="ID" class="form-control" placeholder="ID" />
     <br />
-    <input type="text" name="Baslik" class="form-control" placeholder="Basligi Yaziniz" />
+    <input type="text" name="Baslik" class="form-control" placeholder="Title" />
     <br />
-    <input type="text" name="AltBaslik" class="form-control" placeholder="Alt Başlık giriniz" />
+    <input type="text" name="AltBaslik" class="form-control" placeholder="Subtitle" />
     <br />
-    <input type="text" name="Tarih" class="form-control" placeholder="Çalışma Tarihi" />
+    <input type="text" name="Tarih" class="form-control" placeholder="Working Date" />
     <br />
-    <textarea placeholder="Açıklamanızı Giriniz" name="Aciklama" class="form-control" rows="5"></textarea>
+    <textarea placeholder="Comment" name="Aciklama" class="form-control" rows="5"></textarea>
     <br />
-    <button class="btn btn-info">Güncelle</button>
+    <button class="btn btn-info">Update</button>
 </form>
 
