--- a/MvcCv/Views/Egitim/EgitimEkle.cshtml
+++ b/MvcCv/Views/Egitim/EgitimEkle.cshtml
@@ -5,27 +5,27 @@
 }
 
 <br />
-<h4>Yeni Eğitim Ekleme Sayfası</h4>
+<h4>Add New Education Page</h4>
 <br />
 <form method="post">
     <br />
-    @Html.Label("Başlık")
+    @Html.Label("Title")
     @Html.TextBoxFor(x => x.Baslik, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.Baslik, "", new { @style = "color:red" })
     <br />
-    @Html.Label("Alt Başlık 1")
+    @Html.Label("Subtitle 1")
     @Html.TextBoxFor(x => x.AltBaslik, new { @class = "form-control" })
     <br />
-    @Html.Label("Alt Başlık 2")
+    @Html.Label("Subtitle 2")
     @Html.TextBoxFor(x => x.AltBaslik2, new { @class = "form-control" })
     <br />
-    @Html.Label("Tarih")
+    @Html.Label("Date")
     @Html.TextBoxFor(x => x.Tarih, new { @class = "form-control" })
     <br />
-    @Html.Label("Genel Not Ortalamsı (GNO)")
+    @Html.Label("Grade Point Avarage (GPA)")
     @Html.TextBoxFor(x => x.GNO, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.GNO, "", new { @style = "color:blue" })
     <br />
-    <button class="btn btn-info">Kaydet</button>
+    <button class="btn btn-info">Save</button>
 </form>
 
