--- a/MvcCv/Views/Hobi/Index.cshtml
+++ b/MvcCv/Views/Hobi/Index.cshtml
@@ -6,16 +6,16 @@
 }
 
 <br />
-<h2>Hobi Düzenleme Sayfası</h2>
+<h2>Interest Edit Page</h2>
 <br />
 <form method="post">
     @foreach (var item in Model)
     {
-        <label>Açıklama 1</label>
+        <label>Comment 1</label>
         <textarea rows="5" class="form-control" name="Aciklama1">@item.Aciklama1</textarea>
-        <label>Açıklama 2</label>
+        <label>Comment 2</label>
         <textarea rows="5" class="form-control" name="Aciklama2">@item.Aciklama2</textarea>
     }
     <br />
-    <button class="btn btn-success">Güncelle</button>
+    <button class="btn btn-success">Update</button>
 </form>
