--- a/MvcCv/Views/ProjeMesaj/_YorumListesi.cshtml
+++ b/MvcCv/Views/ProjeMesaj/_YorumListesi.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="comment-top">
-    <h4>Yorumlar</h4>
+    <h4>Comments</h4>
     @foreach (var item in Model)
     {
 <div class="media">    
