--- a/MvcCv/Views/Sertifika/Index.cshtml
+++ b/MvcCv/Views/Sertifika/Index.cshtml
@@ -17,7 +17,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header p-2">
-                            <a href="/Sertifika/SertifikaEkle" class="btn btn-outline-primary">Yeni Sertifika Ekle</a>
+                            <a href="/Sertifika/SertifikaEkle" class="btn btn-outline-primary">Add New Certificate</a>
                         </div><!-- /.card-header -->
                         <div class="card-body">
                             <div class="tab-pane" id="timeline">
