--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -21,22 +21,22 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="card-title">Yetenek Listem</h3>
+                                <h3 class="card-title">Skill List</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
-                                <a href="/Yetenek/YeniYetenek/" class="btn btn-info">Yeni Yetenek Ekle</a>
+                                <a href="/Yetenek/YeniYetenek/" class="btn btn-info">Add New Skill</a>
                                 <br />
                                 <br />
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
                                             <th style="width: 10px">#</th>
-                                            <th>Yetenek</th>
-                                            <th>Derece</th>
-                                            <th style="width: 40px">Oran</th>
-                                            <th>Düzenle</th>   
-                                            <th>Sil</th>
+                                            <th>Skill</th>
+                                            <th>Rating</th>
+                                            <th style="width: 40px">Ratio</th>
+                                            <th>Edit</th>   
+                                            <th>Delete</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -74,13 +74,13 @@
                                             <td>
                                                 <a href="/Yetenek/YetenekDuzenle/@item.ID" class="btn btn-info btn-sm">
                                                     <i class="fas fa-pencil-alt"></i>
-                                                    Düzenle
+                                                    Edit
                                                 </a>
                                             </td>
                                             <td>
                                                 <a href="/Yetenek/YetenekSil/@item.ID" class="btn btn-danger btn-sm">
                                                     <i class="fas fa-trash-alt"></i>
-                                                    Sil
+                                                    Delete
                                                 </a>
                                             </td>
                                         </tr>
