--- a/MvcCv/Views/Yetenek/YetenekDuzenle.cshtml
+++ b/MvcCv/Views/Yetenek/YetenekDuzenle.cshtml
@@ -5,17 +5,17 @@
 }
 
 <br />
-<h4>Yetenek Düzenleme Sayfası</h4>
+<h4>Update Skill Page</h4>
 <br />
 <form method="post">
     <br />
-    @Html.Label("Yetenek Açıklaması")
+    @Html.Label("Skill Explanation")
     @Html.TextBoxFor(x => x.Yetenek, new { @class = "form-control" })
     <br />
-    @Html.Label("Derece")
+    @Html.Label("Ratio")
     @Html.TextBoxFor(x => x.Oran, new { @class = "form-control" })
     <br />
-    <button class="btn btn-success">Güncelle</button>
+    <button class="btn btn-success">Update</button>
 </form>
 
 
