--- a/MvcCv/Views/Login/Index.cshtml
+++ b/MvcCv/Views/Login/Index.cshtml
@@ -23,28 +23,28 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                    <h2 class="heading-section">Mvc Cv Login Paneli</h2>
+                    <h2 class="heading-section">Mvc Cv Login Panel</h2>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
-                        <h3 class="mb-4 text-center">Bir Hesabın Var mı?</h3>
+                        <h3 class="mb-4 text-center">Do You Have An Account?</h3>
                         <form method="post" class="signin-form">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Kullanıcı Adınız" name="KullaniciAdi" required>                               
+                                <input type="text" class="form-control" placeholder="Username" name="KullaniciAdi" required>                               
                             </div>
                             <div class="form-group">
-                                <input id="password-field" type="password" class="form-control" placeholder="Şifreniz" name="Sifre" required>
+                                <input id="password-field" type="password" class="form-control" placeholder="Password" name="Sifre" required>
                                 <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary submit px-3">Giriş Yap</button>
+                                <button type="submit" class="form-control btn btn-primary submit px-3">Login</button>
                             </div>
                             <div class="form-group d-md-flex">
                                 <div class="w-50">
                                     <label class="checkbox-wrap checkbox-primary">
-                                        Beni Hatırla
+                                        Remember Me
                                         <input type="checkbox" checked>
                                         <span class="checkmark"></span>
                                     </label>
